<!--
    MIT License

    Copyright (c) 2018 Jack Francis Bartolone, Robert Benjamin Osborne
    Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"),
    to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense,
    and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
    The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
    IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
    -->
<resources>
    <string name="app_name">PixelPi</string>
    <string name="txtdevicename">[Device Name]</string>
    <string name="btnedit">Edit</string>
    <string name="txtmode">[Mode]</string>
    <string name="txttaskname">[Task Name]</string>
    <string name="txtdisplaytaskfor">Display Task for:</string>
    <string name="btncancel">Cancel</string>
    <string name="btndone">Done</string>
    <string name="txtdevicetaskname">Name:</string>
    <string name="txtpickrepeatcolor">Pick a color pattern to repeat:</string>
    <string name="txteditdevicename">[Device Name]</string>
    <string name="txturl">URL:</string>
    <string name="btnconnect">Connect</string>
    <string name="btndisconnect">Disconnect</string>
    <string name="btnport">Port:</string>
    <string name="devicedisplaytext">"Device: "</string>

    <string-array name="devicemodes">
        <item>@string/SIMPLE</item>
        <item>@string/TIMER</item>
        <item>@string/SHIMMER</item>
        </string-array>
</resources>
