<?xml version="1.0" encoding="utf-8"?>
<!-- todo fix how layout is being displayed still arranged weirdly-->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:shrinkColumns="*"
    android:stretchColumns="*">
    <!--android:weightSum="12"-->


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtdisplaytaskfor"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_span="2"/>
    </TableRow>


    <TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/txtpickrepeatcolor"
        android:textSize="18sp"
        android:layout_span="2"/>
</TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"> -->

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="1"
            android:text="@string/txtdevicetaskname"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtsimpletaskname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="1"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
        <!--</LinearLayout> -->
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
      <!--  <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"> -->

        <Button
            android:id="@+id/btncancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="@string/btncancel"
            android:layout_span="1"/>

        <Button
            android:id="@+id/btndone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:text="@string/btndone"
            android:layout_span="1"/>
        <!--   </LinearLayout> -->
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="8">-->

        <ListView
            android:id="@+id/lvcolors"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <!-- </LinearLayout> -->
    </TableRow>

</TableLayout>